--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".EventBoardActivity">
-
-        </activity>
+        <activity android:name=".EventBoardActivity"></activity>
+        <activity android:name=".CreateEventActivity"></activity>
     </application>
 
 </manifest>
