--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.robertwais.pickupgames">
 
     <application
@@ -18,7 +19,9 @@
         </activity>
         <activity android:name=".EventBoardActivity" />
         <activity android:name=".CreateEventActivity" />
-        <activity android:name=".DetailsActivity"></activity>
+        <activity android:name=".DetailsActivity">
+            android:windowSoftInputMode="adjustResize"
+        </activity>
     </application>
 
 </manifest>
