fixed keyboard blocking edit text and created a better way to pick the time when creating event

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,7 @@
         </activity>
         <activity android:name=".EventBoardActivity" />
         <activity android:name=".CreateEventActivity" />
-        <activity android:name=".DetailsActivity">
-            android:windowSoftInputMode="adjustResize"
+        <activity android:name=".DetailsActivity" android:windowSoftInputMode="adjustPan">
         </activity>
     </application>
 
